# blur

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  meson.build  vcpkg.json  xmake.lua
.github/workflows/: build.yaml  check-version.yaml  notify.yaml  stale-issues.yaml
ci/: build-dependencies-linux.sh  build-dependencies-macos.sh  build-dependencies-windows.ps1
cmake/: FindMPV.cmake
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
installer/: setup.iss
src/cli/: cli.cpp
src/common/: blur.cpp  blur.h  common_pch.h  config_app.cpp  config_app.h  config_base.h  config_blur.cpp  config_blur.h  config_presets.cpp  config_presets.h  rendering.cpp  rendering.h  rendering_frame.cpp  utils.cpp  utils.h
src/gui/: gui.cpp  gui_pch.h  gui_utils.cpp  gui_utils.h  renderer.cpp  renderer.h  sdl.cpp  tasks.cpp  tasks.h  window_manager.cpp
src/gui/components/: main.cpp  notifications.cpp  notifications.h  test.cpp  test.h
src/gui/components/configs/: configs.h  option_information.cpp  options.cpp  preview.cpp
src/gui/fonts/: nv_garamond.h
src/gui/os/: desktop_notification.cpp
src/gui/render/: imconfig.h  render.cpp  render.h
src/gui/render/font/: font.cpp  font.h
src/gui/render/primitives/: rect.cpp  rect.h
src/gui/ui/: keys.cpp  keys.h  ui.cpp  ui.h
src/gui/ui/elements/: frame_snap.h  notification.cpp  videos.cpp
src/gui/ui/helpers/: video.cpp  video.h
src/gui/video/: video.cpp  video.h
src/test/: main.cpp
src/vapoursynth/: benchmark_rife_gpus.py  blur.py
src/vapoursynth/blur/: blending.py  deduplicate.py  interpolate.py  mask.py  utils.py
tests/cli/: cli_test_pch.h  formats.cpp  general.cpp  tests.cpp  tests.h  utils.cpp  utils.h
